--- a/package.json
+++ b/package.json
@@ -3,24 +3,37 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
+    "@mui/material-nextjs": "^5.15.3",
+    "@mui/x-date-pickers": "^6.18.7",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.3",
     "autoprefixer": "10.4.15",
-    "geist": "^1.0.0",
+    "dayjs": "^1.11.10",
     "next": "latest",
-    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
-    "encoding": "^0.1.13"
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "encoding": "^0.1.13",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2"
   }
 }
