finished caht bot

--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@langchain/community": "^0.0.17",
+    "@langchain/openai": "^0.0.11",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/material-nextjs": "^5.15.3",
     "@mui/x-date-pickers": "^6.18.7",
-
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
     "autoprefixer": "10.4.15",
     "dayjs": "^1.11.10",
+    "langchain": "^0.1.2",
     "next": "latest",
+    "openai": "^4.24.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
