--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@supabase/supabase-js": "latest",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
+    "@types/nodemailer": "^6.4.14",
     "autoprefixer": "10.4.15",
     "dayjs": "^1.11.10",
     "langchain": "^0.1.2",
     "next": "latest",
+    "nodemailer": "^6.9.8",
     "openai": "^4.24.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
