--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.5",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "encoding": "^0.1.13",
     "eslint": "8.56.0",
