--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "openai": "^4.24.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.5",
     "typescript": "5.1.3"
   },
   "devDependencies": {
